src/parser/expression_parser.cpp
#include "pseudo/parser/expression_parser.hpp"

#include "pseudo/diagnostics/diagnostic_engine.hpp"
#include "pseudo/source/source_manager.hpp"

#include <memory>
#include <optional>
#include <stdexcept>
#include <string>
#include <utility>
#include <variant>

namespace tpp {
namespace {

SourceSpan joined_span(SourceSpan first, SourceSpan last) noexcept {
    return SourceSpan{
        .source = first.source,
        .begin = first.begin,
        .end = last.end,
    };
}

template <typename Node>
ExpressionPtr make_expression(SourceSpan span, Node node) {
    return std::make_unique<Expression>(Expression{
        .span = span,
        .node = std::move(node),
    });
}

ExpressionPtr make_binary(
    ExpressionPtr left,
    BinaryOperator operator_kind,
    ExpressionPtr right) {
    const auto span = joined_span(left->span, right->span);
    return make_expression(
        span,
        BinaryExpression{
            .operator_kind = operator_kind,
            .left = std::move(left),
            .right = std::move(right),
        });
}

std::optional<UnaryOperator> unary_operator(TokenKind kind) noexcept {
    switch (kind) {
    case TokenKind::plus:
        return UnaryOperator::plus;
    case TokenKind::minus:
        return UnaryOperator::minus;
    case TokenKind::logical_not:
        return UnaryOperator::logical_not;
    default:
        return std::nullopt;
    }
}

std::optional<BinaryOperator> binary_operator(TokenKind kind) noexcept {
    switch (kind) {
    case TokenKind::logical_or:
        return BinaryOperator::logical_or;
    case TokenKind::logical_and:
        return BinaryOperator::logical_and;
    case TokenKind::equal:
        return BinaryOperator::equal;
    case TokenKind::not_equal:
        return BinaryOperator::not_equal;
    case TokenKind::less:
        return BinaryOperator::less;
    case TokenKind::less_equal:
        return BinaryOperator::less_equal;
    case TokenKind::greater:
        return BinaryOperator::greater;
    case TokenKind::greater_equal:
        return BinaryOperator::greater_equal;
    case TokenKind::plus:
        return BinaryOperator::add;
    case TokenKind::minus:
        return BinaryOperator::subtract;
    case TokenKind::star:
        return BinaryOperator::multiply;
    case TokenKind::slash:
        return BinaryOperator::divide;
    case TokenKind::percent:
        return BinaryOperator::remainder;
    default:
        return std::nullopt;
    }
}

std::optional<ScalarTypeKind> scalar_type(TokenKind kind) noexcept {
    switch (kind) {
    case TokenKind::keyword_int:
        return ScalarTypeKind::integer;
    case TokenKind::keyword_bool:
        return ScalarTypeKind::boolean;
    case TokenKind::keyword_char:
        return ScalarTypeKind::character;
    case TokenKind::keyword_string:
        return ScalarTypeKind::string;
    default:
        return std::nullopt;
    }
}

bool is_equality_operator(TokenKind kind) noexcept {
    return kind == TokenKind::equal || kind == TokenKind::not_equal;
}

bool is_comparison_operator(TokenKind kind) noexcept {
    return kind == TokenKind::less || kind == TokenKind::less_equal
        || kind == TokenKind::greater || kind == TokenKind::greater_equal;
}

bool can_start_expression(TokenKind kind) noexcept {
    switch (kind) {
    case TokenKind::identifier:
    case TokenKind::integer_literal:
    case TokenKind::boolean_literal:
    case TokenKind::string_literal:
    case TokenKind::character_literal:
    case TokenKind::left_parenthesis:
    case TokenKind::keyword_vector:
    case TokenKind::plus:
    case TokenKind::minus:
    case TokenKind::logical_not:
        return true;
    default:
        return false;
    }
}

bool is_expression_delimiter(TokenKind kind) noexcept {
    switch (kind) {
    case TokenKind::end_of_file:
    case TokenKind::right_parenthesis:
    case TokenKind::right_bracket:
    case TokenKind::right_brace:
    case TokenKind::comma:
    case TokenKind::semicolon:
        return true;
    default:
        return false;
    }
}

}

ExpressionParser::ExpressionParser(
    std::span<const Token> tokens,
    const SourceManager& sources,
    DiagnosticEngine& diagnostics)
    : tokens_{tokens}
    , sources_{sources}
    , diagnostics_{diagnostics} {
    if (tokens_.empty()
        || tokens_.back().kind != TokenKind::end_of_file) {
        throw std::invalid_argument{
            "expression parser requires a trailing EOF token"};
    }
}

ExpressionPtr ExpressionParser::parse() {
    auto expression = parse_expression();

    if (!expression) {
        synchronize();
        return nullptr;
    }

    if (!at_end()) {
        report_at_current("unexpected token after expression");
        synchronize();
        return nullptr;
    }

    return expression;
}

ExpressionPtr ExpressionParser::parse_expression() {
    return parse_logical_or();
}

ExpressionPtr ExpressionParser::parse_logical_or() {
    auto expression = parse_logical_and();
    if (!expression) {
        return nullptr;
    }

    while (check(TokenKind::logical_or)) {
        const auto operator_kind = *binary_operator(advance().kind);
        auto right = parse_logical_and();
        if (!right) {
            return nullptr;
        }

        expression = make_binary(
            std::move(expression),
            operator_kind,
            std::move(right));
    }

    return expression;
}

ExpressionPtr ExpressionParser::parse_logical_and() {
    auto expression = parse_equality();
    if (!expression) {
        return nullptr;
    }

    while (check(TokenKind::logical_and)) {
        const auto operator_kind = *binary_operator(advance().kind);
        auto right = parse_equality();
        if (!right) {
            return nullptr;
        }

        expression = make_binary(
            std::move(expression),
            operator_kind,
            std::move(right));
    }

    return expression;
}
